WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100088
REGRESSION(
r131421
): Text baseline of a multiple-fields input is not aligned in some locales
https://bugs.webkit.org/show_bug.cgi?id=100088
Summary
REGRESSION(r131421): Text baseline of a multiple-fields input is not aligned ...
Kent Tamura
Reported
2012-10-23 01:31:57 PDT
http://trac.webkit.org/browser/trunk/LayoutTests/platform/chromium-mac/fast/forms/month-multiple-fields/month-multiple-fields-appearance-l10n-expected.png?rev=132187&order=name
Text baseline is not aligned in ko-kr and hi-in in this image. This is caused by
r131421
. An element wrapping sub-fields is a flex-box with -webkit-align-items:center.
Attachments
WIP
(14.91 KB, patch)
2012-10-23 03:10 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Patch
(98.64 KB, patch)
2012-10-23 05:54 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Patch 2
(169.55 KB, patch)
2012-10-23 08:29 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Patch 3
(169.56 KB, patch)
2012-10-23 08:30 PDT
,
Kent Tamura
morrita
: review+
morrita
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2012-10-23 03:10:33 PDT
Created
attachment 170106
[details]
WIP
Kent Tamura
Comment 2
2012-10-23 05:54:39 PDT
Created
attachment 170136
[details]
Patch
Kentaro Hara
Comment 3
2012-10-23 06:16:34 PDT
Looks good. morrita-san: could you take another look?
Kent Tamura
Comment 4
2012-10-23 08:29:15 PDT
Created
attachment 170171
[details]
Patch 2
Kent Tamura
Comment 5
2012-10-23 08:30:41 PDT
Created
attachment 170173
[details]
Patch 3
Hajime Morrita
Comment 6
2012-10-23 17:20:02 PDT
Comment on
attachment 170173
[details]
Patch 3 View in context:
https://bugs.webkit.org/attachment.cgi?id=170173&action=review
> LayoutTests/ChangeLog:10 > + slightly narrow width.
Could you explain why the first-letter is no longer applied to some control texts?
Kent Tamura
Comment 7
2012-10-23 19:12:33 PDT
Committed
r132291
: <
http://trac.webkit.org/changeset/132291
>
Kent Tamura
Comment 8
2012-10-23 19:13:50 PDT
(In reply to
comment #6
)
> Could you explain why the first-letter is no longer applied to some control texts?
https://bugs.webkit.org/show_bug.cgi?id=98836
disabled the first-letter before this change. I adjusted ChangeLog, removed image results, and landed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug