Source/WebCore/html/BaseMultipleFieldsDateAndTimeInputType.cpp
@@ -93,9 +93,40 @@ bool BaseMultipleFieldsDateAndTimeInputType::isEditControlOwnerReadOnly() const
     return element()->disabled();
 }
 
+void BaseMultipleFieldsDateAndTimeInputType::focusAndSelectSpinButtonOwner()
+{
+    if (m_dateTimeEditElement)
+        m_dateTimeEditElement->focusIfNoFocus();
+}
+
+bool BaseMultipleFieldsDateAndTimeInputType::shouldSpinButtonRespondToMouseEvents()
+{
+    return !element()->disabled() && !element()->readOnly();
+}
+
+bool BaseMultipleFieldsDateAndTimeInputType::shouldSpinButtonRespondToWheelEvents()
+{
+    if (!shouldSpinButtonRespondToMouseEvents())
+        return false;
+    return m_dateTimeEditElement && m_dateTimeEditElement->hasFocusedField();
+}
+
+void BaseMultipleFieldsDateAndTimeInputType::spinButtonStepDown()
+{
+    if (m_dateTimeEditElement)
+        m_dateTimeEditElement->stepDown();
+}
+
+void BaseMultipleFieldsDateAndTimeInputType::spinButtonStepUp()
+{
+    if (m_dateTimeEditElement)
+        m_dateTimeEditElement->stepUp();
+}
+
 BaseMultipleFieldsDateAndTimeInputType::BaseMultipleFieldsDateAndTimeInputType(HTMLInputElement* element)
     : BaseDateAndTimeInputType(element)
     , m_dateTimeEditElement(0)
+    , m_spinButtonElement(0)
     , m_pickerIndicatorElement(0)
     , m_pickerIndicatorIsVisible(false)
     , m_pickerIndicatorIsAlwaysVisible(false)
@@ -104,6 +135,8 @@ BaseMultipleFieldsDateAndTimeInputType::BaseMultipleFieldsDateAndTimeInputType(H
 
 BaseMultipleFieldsDateAndTimeInputType::~BaseMultipleFieldsDateAndTimeInputType()
 {
+    if (m_spinButtonElement)
+        m_spinButtonElement->removeSpinButtonOwner();
     if (m_dateTimeEditElement)
         m_dateTimeEditElement->removeEditControlOwner();
 }
@@ -134,6 +167,10 @@ void BaseMultipleFieldsDateAndTimeInputType::createShadowSubtree()
     m_dateTimeEditElement = dateTimeEditElement.get();
     container->appendChild(m_dateTimeEditElement);
     updateInnerTextValue();
+
+    RefPtr<SpinButtonElement> spinButton = SpinButtonElement::create(document, *this);
+    m_spinButtonElement = spinButton.get();
+    container->appendChild(spinButton);
 
 #if ENABLE(DATALIST_ELEMENT) || ENABLE(CALENDAR_PICKER)
     bool shouldAddPickerIndicator = false;
@@ -175,12 +212,19 @@ void BaseMultipleFieldsDateAndTimeInputType::focus(bool)
 
 void BaseMultipleFieldsDateAndTimeInputType::forwardEvent(Event* event)
 {
+    if (m_spinButtonElement) {
+        m_spinButtonElement->forwardEvent(event);
+        if (event->defaultHandled())
+            return;
+    }
+        
     if (m_dateTimeEditElement)
         m_dateTimeEditElement->defaultEventHandler(event);
 }
 
 void BaseMultipleFieldsDateAndTimeInputType::disabledAttributeChanged()
 {
+    m_spinButtonElement->releaseCapture();
     if (m_dateTimeEditElement)
         m_dateTimeEditElement->disabledStateChanged();
 }
@@ -223,6 +267,7 @@ void BaseMultipleFieldsDateAndTimeInputType::minOrMaxAttributeChanged()
 
 void BaseMultipleFieldsDateAndTimeInputType::readonlyAttributeChanged()
 {
+    m_spinButtonElement->releaseCapture();
     if (m_dateTimeEditElement)
         m_dateTimeEditElement->readOnlyStateChanged();
 }
