Source/WebCore/html/BaseMultipleFieldsDateAndTimeInputType.h
@@ -35,6 +35,7 @@
 
 #if ENABLE(INPUT_MULTIPLE_FIELDS_UI)
 #include "DateTimeEditElement.h"
+#include "SpinButtonElement.h"
 
 namespace WebCore {
 
@@ -57,6 +58,13 @@ private:
     virtual bool isEditControlOwnerDisabled() const OVERRIDE FINAL;
     virtual bool isEditControlOwnerReadOnly() const OVERRIDE FINAL;
     virtual AtomicString localeIdentifier() const OVERRIDE FINAL;
+
+    // SpinButtonElement::SpinButtonOwner functions.
+    virtual void focusAndSelectSpinButtonOwner() OVERRIDE;
+    virtual bool shouldSpinButtonRespondToMouseEvents() OVERRIDE;
+    virtual bool shouldSpinButtonRespondToWheelEvents() OVERRIDE;
+    virtual void spinButtonStepDown() OVERRIDE;
+    virtual void spinButtonStepUp() OVERRIDE;
 
     // InputType functions
     virtual void blur() OVERRIDE FINAL;
@@ -86,6 +94,7 @@ private:
     void updatePickerIndicatorVisibility();
 
     DateTimeEditElement* m_dateTimeEditElement;
+    SpinButtonElement* m_spinButtonElement;
 #if ENABLE(DATALIST_ELEMENT) || ENABLE(CALENDAR_PICKER)
     PickerIndicatorElement* m_pickerIndicatorElement;
     bool m_pickerIndicatorIsVisible;
