Source/WebCore/html/TextFieldInputType.h
@@ -41,7 +41,7 @@ class FormDataList;
 
 // The class represents types of which UI contain text fields.
 // It supports not only the types for BaseTextInputType but also type=number.
-class TextFieldInputType : public InputType, private SpinButtonElement::SpinButtonOwner {
+class TextFieldInputType : public InputType, protected SpinButtonElement::SpinButtonOwner {
 protected:
     TextFieldInputType(HTMLInputElement*);
     virtual ~TextFieldInputType();
